--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "eslint": "^4.11.0",
+    "eslint-plugin-dependencies": "^2.4.0",
+    "tiny-test": "^0.9.4",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.8.1"
-  }
+  },
+  "dependencies": {}
 }
