--- a/package.json
+++ b/package.json
@@ -13,16 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.12.0",
     "eslint-plugin-dependencies": "^2.4.0",
     "tiny-test": "^0.9.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "webpack": "^3.8.1"
-  },
-  "dependencies": {
-    "@babel/preset-env": "^7.0.0-beta.32",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
   }
 }
